--- a/sources.cfg
+++ b/sources.cfg
@@ -2,12 +2,12 @@
 # ====================
 
 [component-versions]
-haproxy   = 2.2.0
-nginx     = 1.19.1
-varnish   = 6.4.0
+haproxy   = 2.4.7
+nginx     = 1.21.3
+varnish   = 7.0.0
 
 [downloads]
 haproxy   = http://www.haproxy.org/download/2.2/src/haproxy-${component-versions:haproxy}.tar.gz
 nginx     = http://nginx.org/download/nginx-${component-versions:nginx}.tar.gz
-pcre      = https://sourceforge.net/projects/pcre/files/pcre/8.43/pcre-8.43.tar.gz/download
+pcre      = https://sourceforge.net/projects/pcre/files/pcre2/10.37/pcre2-10.37.tar.gz/download
 varnish   = https://varnish-cache.org/_downloads/varnish-${component-versions:varnish}.tgz
