build(): Update deployment profile

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -45,11 +45,11 @@ find-links =
 # Packages to check out/update when buildout is run
 auto-checkout =
     ade25.base
-    ade25.fabfiles
     ade25.panelpage
     ade25.sitecontent
     ade25.widgets
-    adk.site
+    mhb.site
+    meetshaus.blog
 
 # Make sure buildout never attempts to update packages automatically for
 # production use.
@@ -189,8 +189,8 @@ zope-conf-additional =
     session.type            file
     session.data_dir        ${buildout:directory}/var/sessions/data
     session.lock_dir        ${buildout:directory}/var/sessions/lock
-    session.key             beaker.session.adk
-    session.secret          pah7xeethooMaef2Eisahphie0Ahwaexoo0choh9foongoTu-adk
+    session.key             beaker.session.mhb
+    session.secret          pah7xeethooMaef2Eisahphie0Ahwaexoo0choh9foongoTu-mhb
     </product-config>
 
 
