build(): Downgrade pcre1

--- a/sources.cfg
+++ b/sources.cfg
@@ -9,5 +9,5 @@ varnish   = 7.0.0
 [downloads]
 haproxy   = http://www.haproxy.org/download/2.2/src/haproxy-${component-versions:haproxy}.tar.gz
 nginx     = http://nginx.org/download/nginx-${component-versions:nginx}.tar.gz
-pcre      = https://sourceforge.net/projects/pcre/files/pcre2/10.37/pcre2-10.37.tar.gz/download
+pcre      = https://sourceforge.net/projects/pcre/files/pcre/8.45/pcre-8.45.tar.gz/download
 varnish   = https://varnish-cache.org/_downloads/varnish-${component-versions:varnish}.tgz
