build(): Update default site name

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -149,7 +149,7 @@ session-timeout = 600
 
 [sites]
 # Plone site ids - used in virtual hosting
-main = adk
+main = mhb
 
 [zeoserver]
 recipe = plone.recipe.zeoserver
