feat(): Update styles and layout

--- a/resources/theme/mhb.theme/manifest.cfg
+++ b/resources/theme/mhb.theme/manifest.cfg
@@ -11,8 +11,8 @@ disabled-bundles =
 development-css =
 production-css =
 
-development-js = /++theme++mhb.theme/scripts/app.umd.js
-production-js = /++theme++mhb.theme/scripts/app.umd.js
+development-js =
+production-js =
 
 [theme:parameters]
 ajax_load = python: request.form.get('ajax_load')
