--- a/buildout.d/templates/nginx-site-private.conf
+++ b/buildout.d/templates/nginx-site-private.conf
@@ -12,8 +12,8 @@ server {
 
     root ${site:static-resources};
 
-    auth_basic "Restricted";
-    auth_basic_user_file ${buildout:directory}/etc/.htpasswd;
+    auth_basic ${http-auth:basic};
+    auth_basic_user_file ${http-auth:basic_user_file};
 
     ssl_certificate      ${ssl:certificate-private};
     ssl_certificate_key  ${ssl:key-private};
