feat(): Access control header preflight

--- a/buildout.d/templates/nginx-site-private.conf
+++ b/buildout.d/templates/nginx-site-private.conf
@@ -66,12 +66,14 @@ server {
         }
         location / {
             rewrite ^/(.*)$ /VirtualHostBase/https/${hosts:private}:${ports:https}/${sites:main}/VirtualHostRoot/$1 break;
+            add_header 'Access-Control-Allow-Origin' '*' always;
             # Back end (for SSL content)
             proxy_pass http://cache;
             include ${buildout:directory}/etc/proxy_settings.conf;
         }
         location @backend {
             rewrite ^/(.*)$ /VirtualHostBase/https/${hosts:private}:${ports:https}/${sites:main}/VirtualHostRoot/$1 break;
+            add_header 'Access-Control-Allow-Origin' '*' always;
             # Back end (for SSL content)
             proxy_pass http://cache;
             include ${buildout:directory}/etc/proxy_settings.conf;
