refactor(): Update manifest location block

--- a/buildout.d/templates/nginx-site-private.conf
+++ b/buildout.d/templates/nginx-site-private.conf
@@ -37,7 +37,7 @@ server {
         }
 
         # Favicon support
-        location ~ ^/(apple-touch-icon|browserconfig|favicon|mstile|android-chrome|safari-pinned-tab|manifest|webmanifest)(.*)\.(png|xml|ico|svg|json)$ {
+        location ~ ^/(apple-touch-icon|browserconfig|favicon|mstile|android-chrome|safari-pinned-tab|manifest|site)(.*)\.(png|xml|ico|svg|json|webmanifest)$ {
             root ${site:static-resources}/assets/ico;
             include ${buildout:directory}/etc/disable_logging.conf;
         }
